syntax = "proto3";

package pb;

// TODO:

service IdGeneratorService {
    rpc GenerateId(GenerateIdRequest) returns(GenerateIdReply) {}
}

message GenerateIdRequest {
    int64 NodeId = 1;
}

message GenerateIdReply {
    int64 Id = 1;
}
